[gd_scene load_steps=4 format=2]

[ext_resource path="res://Screens/Login/Login.gd" type="Script" id=1]
[ext_resource path="res://Assets/Mit_sansv3.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 48
font_data = ExtResource( 2 )

[node name="Login" type="Node"]
script = ExtResource( 1 )

[node name="Logo" type="RichTextLabel" parent="."]
margin_top = 100.0
margin_right = 1278.0
margin_bottom = 210.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Multiplayer Online Game[/center]"
text = "Multiplayer Online Game"

[node name="UI" type="CanvasLayer" parent="."]

[node name="LoginPanel" type="Panel" parent="UI"]
margin_left = 510.0
margin_top = 440.0
margin_right = 820.0
margin_bottom = 550.0

[node name="UserLabel" type="Label" parent="UI/LoginPanel"]
editor/display_folded = true
margin_left = 12.0
margin_top = 20.0
margin_right = 78.0
margin_bottom = 34.0
text = "Account"

[node name="UserInput" type="LineEdit" parent="UI/LoginPanel/UserLabel"]
margin_left = 72.0
margin_top = -4.0
margin_right = 292.0
margin_bottom = 20.0
placeholder_text = "Enter your email address"
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordLabel" type="Label" parent="UI/LoginPanel"]
editor/display_folded = true
margin_left = 11.0
margin_top = 53.0
margin_right = 77.0
margin_bottom = 67.0
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="UI/LoginPanel/PasswordLabel"]
margin_left = 72.0
margin_top = -4.0
margin_right = 292.0
margin_bottom = 20.0
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="ServerMessage" type="Label" parent="UI/LoginPanel"]
margin_left = 12.0
margin_top = 80.0
margin_right = 299.0
margin_bottom = 100.0

[node name="Login" type="Button" parent="UI"]
margin_left = 588.0
margin_top = 560.0
margin_right = 740.0
margin_bottom = 580.0
text = "Login"

[node name="Quit" type="Button" parent="UI"]
margin_left = 1180.0
margin_top = 690.0
margin_right = 1270.0
margin_bottom = 710.0
text = "Quit"

[connection signal="pressed" from="UI/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="UI/Quit" to="." method="_on_quit_pressed"]
